--- a/app/globals.css
+++ b/app/globals.css
@@ -16,7 +16,7 @@
   }
 
   .common-padding {
-    @apply sm:py-32 sm:px-10 py-20 px-10;
+    @apply sm:py-32 sm:px-20 py-20 px-10;
   }
 
   .nav-height {
@@ -27,11 +27,22 @@
     @apply text-left font-semibold text-3xl md:text-5xl lg:text-7xl text-orange;
   }
 
+  .form-fields {
+    @apply w-full bg-white text-dark text-sm md:text-base py-2 px-4 rounded-xl border border-none outline-none mb-2;
+  }
+
   .header-1 {
     @apply font-semibold text-[2.25rem] leading-[2.875rem]     /* Base font size 36px, line height 46px (approximately 1.27) */
                         md:text-[2.75rem] md:leading-[3.75rem] /* Medium screen size: font size 44px, line height 60px */
                         lg:text-[4rem] lg:leading-[5rem]       /* Large screen size: font size 64px, line height 80px */
                         xl:text-[4rem] xl:leading-[4.5rem]; /* Extra Large screen size: Adjusted as needed */
+  }
+
+  .header-2 {
+    @apply font-semibold text-[2.25rem] leading-[2.875rem]     /* Base font size 36px, line height 46px (approximately 1.27) */
+                        md:text-[2.5rem] md:leading-[3rem] /* Medium screen size: font size 44px, line height 60px */
+                        lg:text-[2.75rem] lg:leading-[3.25rem]       /* Large screen size: font size 64px, line height 80px */
+                        xl:text-[3rem] xl:leading-[3.5rem]; /* Extra Large screen size: Adjusted as needed */
   }
 
   .text-1 {
